[project]
name = "api-rate-limiter"
version = "0.1.0"
description = "Production-grade API rate limiter — 4 algorithms, Redis backend, FastAPI middleware"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis[hiredis]>=5.0.0",
    "prometheus-client>=0.20.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "locust>=2.20.0",
    "ruff>=0.4.0",
]
 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.hatch.build.targets.wheel]
packages = ["src/rate_limiter"]
 
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
 
[tool.ruff]
line-length = 88
src = ["src"]
 
[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
