[project]
name = "blog-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.16.5",
    "fastapi[standard]>=0.128.8",
    "greenlet>=3.2.5",
    "jinja2>=3.1.6",
    "pillow>=11.3.0",
    "psycopg[binary]>=3.2.13",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.49",
]
